tests/compile-fail/compile_fail__type_error__bad_declaration.snap
---
source: tests/compile-fail.rs
expression: stderr
---
error: unexpected token `%`
   ┌─ <input>:27:11
   │
27 │       int %x;  
   │           ^ unexpected token
   │
   = 
     Expected one of ";", "anim", "ecli", "entry", "mapfile", "script", "timeline" or IDENT


